<?xml version="1.0"?>
<package format="2">
  <name>aliveos</name>
  <version>0.1.1</version>
  <description>AliveOS is an operating system using ROS infrastructure. The OS implements structures of animal brains such as: reflexes, instincts, hormones, etc. </description>

  <author email="mail@agramakov.me">Andrei Gramakov</author>
  <maintainer email="mail@agramakov.me">Andrei Gramakov</maintainer>
  <license>GPLv3</license>
  <url type="website">https://github.com/an-dr/aliveos</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>aliveos_launch</exec_depend>
  <exec_depend>aliveos_msgs</exec_depend>
  <exec_depend>aliveos_py</exec_depend>
  
  <exec_depend>aliveos_app</exec_depend>
  <exec_depend>aliveos_middle</exec_depend>
  <exec_depend>aliveos_hw</exec_depend>
  
  <exec_depend>aliveos_demo</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
